# rhiza

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  GITLAB_CI.md  Makefile  PRESENTATION.md  README.md  REPOSITORY_ANALYSIS.md  ROADMAP.md  pyproject.toml
.claude/: analysis.md  plan.md  quality.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: config.yml
.github/agents/: coverage-agent.md
.github/hooks/: session-end.sh
.github/workflows/: copilot-setup-steps.yml  coverage-agent.yml  rhiza_benchmarks.yml  rhiza_book.yml  rhiza_ci.yml  rhiza_coverage-agent.yml  rhiza_docker.yml  rhiza_gh-aw-validate.yml  rhiza_marimo.yml  rhiza_release.yml  rhiza_security.yml  rhiza_validate.yml
.gitlab/: COMPARISON.md  README.md  SUMMARY.md  TESTING.md  validate.sh
.gitlab/templates/: marimo_job_template.yml
.gitlab/workflows/: rhiza_book.yml  rhiza_ci.yml  rhiza_deptry.yml  rhiza_devcontainer.yml  rhiza_docker.yml  rhiza_marimo.yml  rhiza_pre-commit.yml  rhiza_release.yml  rhiza_sync.yml  rhiza_validate.yml
.rhiza/: .cfg.toml  INDEX.md  rhiza.mk  template-bundles.yml
.rhiza/agentic/: Makefile.agentic
.rhiza/make.d/: book.mk  releasing.mk  test.mk
.rhiza/scripts/: book.sh  bump.sh  release.sh
.rhiza/tests/: README.md
.rhiza/tests/api/: conftest.py  test_makefile_targets.py
.rhiza/tests/security/: test_security_patterns.py
.rhiza/tests/structure/: test_requirements.py
.rhiza/tests/sync/: conftest.py
.rhiza/utils/: generate_coverage_badge.py
book/marimo/: marimo.mk
book/marimo/notebooks/: dummy.py
docker/: Dockerfile  Makefile.docker
docs/: CUSTOMIZATION.md  EXTENDING_RHIZA.md  GLOSSARY.md  SHELL_SCRIPTS.md  TOOLS_REFERENCE.md  analysis.md  index.md  mkdocs.yml
docs/adr/: 0001-use-architecture-decision-records.md  0005-separate-rhiza-template-from-cli.md  0006-organise-templates-into-bundles.md  README.md
src/rhiza/: __init__.py  eg.py
src/rhiza/tools/: hello.py
tests/: Makefile.tests
tests/benchmarks/: conftest.py  test_benchmarks.py
tests/property/: conftest.py
tests/stress/: README.md  __init__.py  conftest.py  test_stress.py
tests/test_rhiza/: test_coverage_badge.py  test_eg.py  test_greet.py  test_makefile.py  test_notebooks.py
