[project]
name = "rhiza"
version = "0.4.0"
description = "Reusable configuration templates for modern Python projects"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Thomas Schmelzer" }
]
keywords = ["templates", "configuration", "ci", "ruff"]
classifiers = [
    "Private :: Do Not Upload",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "marimo>=0.18.0",
    "numpy>=2.4.0",
    "plotly>=6.5.0",
    "pandas>=2.3.3",
    "packaging>=25.0"
]

[project.urls]
Homepage = "https://github.com/jebel-quant/rhiza"
Repository = "https://github.com/jebel-quant/rhiza"
Issues = "https://github.com/jebel-quant/rhiza/issues"


[project.optional-dependencies]
dev = [
    "pytest-cov>=7.0.0",
    "pytest-html>=4.1.1",
    "pytest==9.0.2",
    "pre-commit==4.5.1",
    "pdoc>=16.0.0",
    "python-dotenv==1.2.1"
]

[tool.deptry]
# see https://deptry.com/usage/#pep-621-dev-dependency-groups
pep621_dev_dependency_groups = ["dev"]

